refactor: 修改了类加载器学习笔记和相关代码示例